--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+v2015.6.30
+- Made titles more descriptive
+- Alphabetic sorting (Live files first, then upcoming)
+- Disabled caching of listings
+
 v2015.6.26
 - Added search ability
 
