--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+v2015.8.13
+- Added Search Archive Feature
+- Label videos as episodes and gave them air dates where applicable
+- Imporved stream fetching ability
+
 v2015.6.30
 - Made titles more descriptive
 - Alphabetic sorting (Live files first, then upcoming)
