--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+v2015.9.1
+- Added back bug fix in v2015.8.28 that i accidentilty removed
+
 v2015.8.31
 - Attempt to fix live search results playing wrong streams
 
