--- a/changelog.txt
+++ b/changelog.txt
@@ -1,16 +1,10 @@
-v2015.9.1
-- Added back bug fix in v2015.8.28 that i accidentilty removed
-
-v2015.8.31
-- Attempt to fix live search results playing wrong streams
-
-v2015.8.28
-- Changed stream quality selection to dialog box
+v2015.9.21
+- Fix for live & archive search errors
 
 v2015.8.13
 - Added Search Archive Feature
 - Label videos as episodes and gave them air dates where applicable
-- Improved stream fetching ability
+- Imporved stream fetching ability
 
 v2015.6.30
 - Made titles more descriptive
