--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 v2015.9.21
+- Removed Search Archive
+- Search now has the ability to list events, accounts and videos separately
+- When using selecting an account videos are separated into Upcoming and Past events
+
+v2015.9.21
 - Fix for live & archive search errors
 
 v2015.8.13
