--- a/changelog.txt
+++ b/changelog.txt
@@ -1,7 +1,7 @@
-v2015.9.21
+v2015.9.22
 - Removed Search Archive
 - Search now has the ability to list events, accounts and videos separately
-- When using selecting an account videos are separated into Upcoming and Past events
+- When selecting an account videos are separated into Upcoming and Past events
 
 v2015.9.21
 - Fix for live & archive search errors
