--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+v2015.10.2
+- Added play best stream automatically setting
+- Changed code to accomodate for 1 or more streams per event for both live and archive
+- Added description to stream info
+
 v2015.9.22
 - Removed Search Archive
 - Search now has the ability to list events, accounts and videos separately
